Fix minor layout issues

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -38,6 +38,11 @@ body {
 
 }
 
+.jpa-practice-client .list-loading {
+    text-align: center;
+    padding: 16px;
+}
+
 .jpa-practice-client .list-empty {
     text-align: center;
     padding: 16px;
